--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
 
     <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="dist/clipboard.min.js"></script>
     <script src="http://3.89.30.234:3001/socket.io/socket.io.js"></script>
     <script>
           var url = "http://3.89.30.234:3001";
