Teacher page react

--- a/public/index.html
+++ b/public/index.html
@@ -51,8 +51,12 @@
           })
 
           /*
-            주의사항에서 학생아이디, 이름
+            주의사항에서 학생아이디, 이름 / 받기 : s_number
             감독에서는 선생님 아이디, 시험번호
+
+            socket.connect( url ) -> 커넥트
+            받는 거 socket.on( {key}, ( {return value(서버에서 보내주는 데이터 저장 됨)}) => { code .. }) => get onmessage
+            보내는 거socket.emi({key}, {data}) => send
           */
 
           
