React Proctor Exam Highlight

--- a/public/index.html
+++ b/public/index.html
@@ -93,6 +93,9 @@
           $('#my_iframe').css('width', '+=' + length_of_move);
         }
       }); 
+
+      $(".std_warning_area_eye").toggle();
+        $(".std_warning_area_voice").toggle();
     </script>
 
     <title>Re:Coder</title>
